# python_magnetworkflows

./: README.md  archive.sh  pyproject.toml  setup.py  singularity.def  start-venv.sh
.devcontainer/: Dockerfile
debian/: changelog  control  copyright  rules
python_magnetworkflows/: __init__.py  cli.py  cooling.py  error.py  run.py
